Added Some Code against Build

--- a/src/app/attendee-list/attendee-list.component.html
+++ b/src/app/attendee-list/attendee-list.component.html
@@ -315,7 +315,8 @@
     <div class="form-group rec-speaker-program-btns">
         <div class="col-md-12">
           <!-- <button mat-button class="fnt-weigth">Reset</button> -->
-          <button mat-button class="primary-custom" (click)="stepperNext(stepper)">Update
+          <!-- <button mat-button class="primary-custom" (click)="stepperNext(stepper)">Update -->
+					<button mat-button class="primary-custom">Update
           </button>
         </div>
     </div>
