--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -483,7 +483,8 @@
           </div>
         </div><!-- Speaker Program Row -->
         <div class="add-btn">
-          <button mat-button class="primary-custom" (click)="stepperNext(stepper)">Add Note</button>
+          <!-- <button mat-button class="primary-custom" (click)="stepperNext(stepper)">Add Note</button> -->
+          <button mat-button class="primary-custom">Add Note</button>
         </div>
     </mat-card> 
     <div class="clearfix"></div>
