--- a/src/app/speaker/speaker-upload-popup.html
+++ b/src/app/speaker/speaker-upload-popup.html
@@ -1,11 +1,11 @@
 <div class="col-md-12 speaker-popup-parent">
-        <img src="/assets/icons/popup-close.png" class="close-position">
+        <img src="assets/icons/popup-close.png" class="close-position">
         
         <div class="daliog-master-heading">Upload Files</div>
         <div class="col-md-12 nopadding">
            <div class="col-md-12 file-info">
                 Speaker Image.jpg
-                <span class="pull-right"><img src="/assets/icons/ico-close.png"></span>
+                <span class="pull-right"><img src="assets/icons/ico-close.png"></span>
            </div>
            
            <div class="col-md-12 choose-btn text-right nopadding">
