--- a/src/app/login/login-forgot.html
+++ b/src/app/login/login-forgot.html
@@ -1,6 +1,6 @@
 <div class="row custom-row">
 <div class="col-md-12 logo-header">
-        <img src="/assets/img/logo-2.png" class="">
+        <img src="assets/img/logo-2.png" class="">
 </div>
 </div>
       
