--- a/src/app/training/upload.files.html
+++ b/src/app/training/upload.files.html
@@ -1,19 +1,19 @@
 <div class="col-md-12 upload-popup-parent">
-    <img src="/assets/icons/popup-close.png" class="close-position">
+    <img src="assets/icons/popup-close.png" class="close-position">
     
     <div class="daliog-master-heading">Upload Files</div>
     <div class="col-md-12 nopadding">
        <div class="col-md-12 file-info">
             TrainingDeckFileName1.ppt
-            <span class="pull-right"><img src="/assets/icons/ico-close.png"></span>
+            <span class="pull-right"><img src="assets/icons/ico-close.png"></span>
        </div>
        <div class="col-md-12 file-info">
             TrainingDeckFileName1.ppt
-            <span class="pull-right"><img src="/assets/icons/ico-close.png"></span>
+            <span class="pull-right"><img src="assets/icons/ico-close.png"></span>
        </div>
        <div class="col-md-12 file-info mr-b-0">
             TrainingDeckFileName1.ppt
-            <span class="pull-right"><img src="/assets/icons/ico-close.png"></span>
+            <span class="pull-right"><img src="assets/icons/ico-close.png"></span>
        </div> 
        <div class="col-md-12 choose-btn text-right nopadding">
             <button mat-button class="btn btn-white">Choose File</button>
