--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,7 @@
             </li>-->
 
             <li>
-              <a [routerLink]="['/calender']" [routerLinkActive]="['router-link-active']">
+              <a [routerLink]="['/event-details']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <img src="assets/icons/calendar.svg" class="img-responsive" />
                   MY EVENTS
