search speaker screen complated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,7 +52,7 @@
             </li>-->
 
             <li>
-              <a [routerLink]="['/calender']" [routerLinkActive]="['router-link-active']">
+              <a [routerLink]="['/event-details']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <img src="assets/icons/calendar.svg" class="img-responsive" />
                   MY EVENTS
@@ -107,7 +107,7 @@
             </li>
 
             <li>
-              <a [routerLink]="['/attendee']" [routerLinkActive]="['router-link-active']">
+              <a [routerLink]="['/attendee-list']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <span class="glyphicon glyphicon-list"></span>
                   <div class="clearfix"></div>
