--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -102,6 +102,7 @@
             </mat-form-field>
           </div>
         </div>
+        <div class="clearfix"></div> 
         <div class="form-group">
           <div class="col-md-12 speaker-inputs">
             <label>Speaker Program Start Time</label>
@@ -111,6 +112,7 @@
             <div class="col-md-3"><input class="form-control"></div>
           </div>
         </div>
+        <div class="clearfix"></div> 
         <div class="form-group">
           <div class="col-md-12 speaker-inputs">
             <label>Speaker Program End Time</label>
@@ -120,6 +122,7 @@
             <div class="col-md-3"><input class="form-control"></div>
           </div>
         </div>
+        <div class="clearfix"></div> 
         <div class="form-group">
           <div class="col-md-12">
             <label>Time Zone</label>
@@ -801,7 +804,7 @@
         <div class="col-md-12 speaker-wrapper">
           <span class="header-text-style"> Speaker</span>
           <hr>
-       
+       <div class="clearfix"></div>
         <div class="col-md-1">
           <img src="assets/img/user-profile.png" width="50">
         </div>
@@ -829,7 +832,7 @@
         <div class="col-md-12 venue-forth-wrapper">
           <span class="header-text-style">Venue </span>
           <hr class="hr-color">
-        
+          <div class="clearfix"></div>
         <div class="col-md-4">
           <p><span class="vanue-style">Name:</span> 111 Chop House</p>
           <p><span class="vanue-style">Type:</span> Restaurant</p>
