--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -456,9 +456,12 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
     .fnt-weigth{
         margin-top: 18px;
         margin-bottom: 18px;
+        float: left;
+        margin-left: 0px;
     }
     .primary-custom {
         margin-top: 17px;
+        float: left;
     }
     .search-padding {
         padding-top: 12px;
@@ -466,5 +469,21 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
     }
     .text-center{
         float: left;
+    }
+    .final-forth-program0-wrap{
+        margin-top: 0px;
+    }
+    .logisitic-pallet-spacing{ 
+        margin-top: 0px;
+    }
+    .pull-right {
+        float: left !important;
+    }
+    .line-height{
+        padding-left: 0px;
+    }
+    .speaker-inputs .col-md-3 {
+        margin-bottom: 10px;
+        padding-left: 0px;
     }
   }
