--- a/src/app/search-speaker/search-speaker.component.css
+++ b/src/app/search-speaker/search-speaker.component.css
@@ -68,13 +68,19 @@ mat-card ul{
 }
 @media only screen and (max-width: 800px) {
     .search-speaker-wrapper mat-card{
-        padding: 25px;  
+        padding: 15px;  
     }
     .white-btn-wrap .btn-white{
         margin: 20px 0px; 
   }
-  .text-right.btn-wrap,
-  .flt-rt{
+  .text-right.btn-wrap{
     text-align: center;
   }
+  .flt-rt{
+      float: left;
+      padding-left: 0px;
+  }
+  .line-height{
+    padding-left: 0px;
+ } 
 }
