--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -117,7 +117,7 @@
             </li>
 
             <li>
-              <a [routerLink]="['/initiatetraining']" [routerLinkActive]="['router-link-active']">
+              <a [routerLink]="['/reports']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <span class="glyphicon glyphicon-stats"></span>
                   <div class="clearfix"></div>
