--- a/src/app/speaker/speaker.component.html
+++ b/src/app/speaker/speaker.component.html
@@ -1,4 +1,8 @@
 <div class="col-md-12 speaker-admin-wrapper">
+  <div class="col-md-12 sub-link">
+    <a routerLink="/search-speaker" class="clr-blue">>> Search Speaker</a>
+  </div>
+  <div class="clearfix"></div>
   <mat-card>
     <div class="master-heading">Speaker Details</div>
     <hr>
