--- a/src/app/training/training.component.css
+++ b/src/app/training/training.component.css
@@ -1,12 +1,18 @@
 .training-admin-wrapper mat-card{
     padding: 38px 44px 0px 45px; 
-    margin-top: 70px;
+    margin-top: 25px;
     margin-bottom: 70px;
     box-shadow: 0 6px 24px 0 #E2E9F7;
 }
 .training-admin-wrapper mat-card hr{
     margin-top: 0px;
     margin-bottom: 20px;
+}
+.sub-link{
+    margin-top: 25px;
+}
+.clr-blue{
+    color: #2B62CA !important;
 }
 .icon-panel{
     font-size: 15px;	font-weight: 500;	line-height: 18px;
