--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
               </a>
             </li>
 
-            <!--<li class="has-submenu">
+            <li class="has-submenu">
               <a [routerLink]="['/create']" [routerLinkActive]="['router-link-active']">
                 <span class="nav-pad">
                   <span class="glyphicon glyphicon-plus"></span>
@@ -49,7 +49,7 @@
                 <li>menu 1</li>
                 <li>menu 2</li>
               </ul>
-            </li>-->
+            </li>
 
             <li>
               <a [routerLink]="['/calender']" [routerLinkActive]="['router-link-active']">
