--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -77,7 +77,7 @@
               <mat-radio-group>
                 <mat-radio-button value="1" [checked]="true">Live </mat-radio-button>
                 <mat-radio-button value="2">Virtual </mat-radio-button>
-                <mat-radio-button value="3"> <input type="text" class="form-control" placeholder="Others"></mat-radio-button>
+                <mat-radio-button  class="hidden" value="3"> <input type="text" class="form-control" placeholder="Others"></mat-radio-button>
               </mat-radio-group>
             </div>
 
@@ -137,9 +137,13 @@
       <div class="col-md-6 p-l-25 right-form-wrap">
         <div class="form-group">
           <div class="col-md-5"><label>Attendees</label><input type="text" class="form-control"></div>
-          <div class="col-md-5"><label>Speakers</label><input type="text" class="form-control clr-lightgrey"></div>
+          <div class="col-md-5"><label>Patient Speaker</label><input type="text" class="form-control clr-lightgrey"></div>
         </div>
         <div class="form-group">
+            <div class="col-md-5"><label>Alexion Employees</label><input type="text" class="form-control"></div>
+            <div class="col-md-5"><label>HCP Speaker</label><input type="text" class="form-control clr-lightgrey"></div>
+          </div>
+        <div class="form-group hidden">
           <div class="col-md-12">
             <label>Total Number of Alexion Employees</label>
             <input type="text" class="form-control">
@@ -175,7 +179,7 @@
         </div>
         <div class="form-group form-group-custom">
           <div class="col-md-12">
-            <label class="clr-grey">Optional Meeting Services</label>
+            <label class="clr-grey">Optional Meeting Services*:</label>
             <div class="clearfix"></div>
             <mat-checkbox>Px onsite coordinator at your Meeting <b>(ADMIN ONLY)</b></mat-checkbox>
             <mat-checkbox>Print Invitations generated and mailed to you for distribution </mat-checkbox>
@@ -859,12 +863,14 @@
         <button class="btn primary-custom mat-button"> Submit</button>
       </div>
       <div class="clearfix"></div> 
-      <div class="col-md-6 ">
+      <div class="hidden">
+      <div class="col-md-6">
         <a class="pgm-exp">Program Exception </a>
       </div>
       <div class="col-md-6">
         <a class="pgm-status">Program Status </a>
       </div>
+    </div>
     </mat-card>
   </mat-step>
 
