--- a/src/app/reconcile-speaker-program/reconcile-speaker-program.component.css
+++ b/src/app/reconcile-speaker-program/reconcile-speaker-program.component.css
@@ -38,7 +38,7 @@ mat-card ul{
     padding-left: 0px;
 }
 .form-group {
-    /*margin-bottom: 20px;*/
+    margin-bottom: 25px;
     float: left;
     width: 100%;
 }
