--- a/src/app/reconcile-speaker-program/reconcile-speaker-program.component.html
+++ b/src/app/reconcile-speaker-program/reconcile-speaker-program.component.html
@@ -23,7 +23,7 @@
               <ul class="pad-lft-zero">
                 <li><b>Program Type</b>: Live</li>
                 <li><b>Speaker</b>: Juan Alejos</li>
-                <li><b>Territory</b>: TM - Austin, TX</li>
+                <!-- <li><b>Territory</b>: TM - Austin, TX</li> -->
               </ul>
             </div>
       
@@ -142,7 +142,7 @@
                           </mat-form-field>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" hidden>
                         <div class="col-md-3">
                           <label>NPI</label>
                           <mat-form-field class="example-full-width">
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-3">
+                        <div class="col-md-3" hidden>
                           <label>Digital Signature</label>
                           <mat-form-field>
                             <mat-select placeholder="" value="NA">
@@ -211,6 +211,7 @@
                 </div>
               </div>
             </div><!-- Speaker Program Row -->
+            <div class="clearfix"></div>
 
             <div class="speaker-program-row dark">
               <div class="row">
@@ -261,7 +262,7 @@
                           </mat-form-field>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" hidden>
                         <div class="col-md-3">
                           <label>NPI</label>
                           <mat-form-field class="example-full-width">
@@ -286,7 +287,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-3">
+                        <div class="col-md-3" hidden>
                           <label>Digital Signature</label>
                           <mat-form-field>
                             <mat-select placeholder="" value="NA">
@@ -330,6 +331,7 @@
                 </div>
               </div>
             </div><!-- S Row -->
+            <div class="clearfix"></div>
             
             <div class="speaker-program-row">
               <div class="row">
@@ -380,7 +382,7 @@
                           </mat-form-field>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" hidden>
                         <div class="col-md-3">
                           <label>NPI</label>
                           <mat-form-field class="example-full-width">
@@ -405,7 +407,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-3">
+                        <div class="col-md-3" hidden>
                           <label>Digital Signature</label>
                           <mat-form-field>
                             <mat-select placeholder="" value="NA">
@@ -527,7 +529,7 @@
                           </mat-form-field>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" hidden>
                         <div class="col-md-3">
                           <label>NPI</label>
                           <mat-form-field class="example-full-width">
@@ -552,7 +554,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-3">
+                        <div class="col-md-3" hidden>
                           <label>Digital Signature</label>
                           <mat-form-field>
                             <mat-select placeholder="" value="NA">
@@ -672,7 +674,7 @@
                           </mat-form-field>
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" hidden>
                         <div class="col-md-3">
                           <label>NPI</label>
                           <mat-form-field class="example-full-width">
@@ -697,7 +699,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-3">
+                        <div class="col-md-3" hidden>
                           <label>Digital Signature</label>
                           <mat-form-field>
                             <mat-select placeholder="" value="NA">
@@ -741,6 +743,7 @@
                 </div>
               </div>
             </div><!-- Attendee Row -->
+            <div class="clearfix"></div>
 
             <div class="speaker-program-row dark">
                 <div class="row">
@@ -791,7 +794,7 @@
                             </mat-form-field>
                           </div>
                       </div>
-                      <div class="form-group">
+                      <div class="form-group" hidden>
                           <div class="col-md-3">
                             <label>NPI</label>
                             <mat-form-field class="example-full-width">
@@ -816,7 +819,7 @@
                           </div>
                       </div>
                       <div class="form-group">
-                          <div class="col-md-3">
+                          <div class="col-md-3" hidden>
                             <label>Digital Signature</label>
                             <mat-form-field>
                               <mat-select placeholder="" value="NA">
