--- a/src/app/reconcile-speaker-program/reconcile-speaker-program.component.html
+++ b/src/app/reconcile-speaker-program/reconcile-speaker-program.component.html
@@ -908,7 +908,7 @@
         <mat-card class="first-wrap line-height mat-card-sd card-table">
           <div class="col-md-9"><span class="header-text-style">Speaker Expenses: Jack Aaron</span></div>
           <div class="col-md-3">
-            <button class="btn view-details-custom-attendee fnt-weigth pull-right"> Add Expense </button>
+            <button class="btn view-details-custom fnt-weigth pull-right"> Add Expense </button>
           </div>
           <div class="clearfix"></div>
           <div class="col-md-12">
@@ -963,9 +963,9 @@
 
                     <ng-container matColumnDef="Details">
                         <th mat-header-cell *matHeaderCellDef> <span>Details</span> </th>
-                        <td mat-cell *matCellDef="let element; let i = index;" [class.final-td]="(i+1) == dataSource.length"  class="border-radius-right">  
+                        <td mat-cell *matCellDef="let element; let i = index;" [class.final-td]="(i+1) == dataSource.length"  class="border-radius-right clr-blue-expense">  
                             <button mat-icon-button *ngIf="(i+1) != dataSource.length" (click)="openDialog()">
-                              <mat-icon>border_color</mat-icon>
+                              <mat-icon>Add Expense</mat-icon>
                             </button>
                         </td>
                     </ng-container>
@@ -1122,7 +1122,7 @@
                       
                         <!-- Name Column -->
                         <ng-container matColumnDef="Alexion Submitted">
-                          <th mat-header-cell *matHeaderCellDef> <span>Alexion Submitted</span> </th>
+                          <th mat-header-cell *matHeaderCellDef> <span>PxG Group Submitted</span> </th>
                           <td mat-cell *matCellDef="let element; let i = index;" [class.final-td]="(i+1) == dataSource.length"> 
                               <mat-form-field class="example-full-width" *ngIf="(i+1) != dataSource.length">
                                   <input type="text" matInput placeholder="" [value]="element.alexon" disabled>
@@ -1148,7 +1148,7 @@
                       
                         <!-- Symbol Column -->
                         <ng-container matColumnDef="Alexion and Speaker Total">
-                          <th mat-header-cell *matHeaderCellDef> <span>Alexion and Speaker Total</span> </th>
+                          <th mat-header-cell *matHeaderCellDef> <span>PxG Group and Speaker Total</span> </th>
                           <td mat-cell *matCellDef="let element; let i = index;" [class.final-td]="(i+1) == dataSource.length"> 
                               <mat-form-field class="example-full-width" *ngIf="(i+1) != dataSource.length">
                                   <input type="text" matInput placeholder="" [value]="element.total" disabled>
@@ -1161,9 +1161,9 @@
     
                         <ng-container matColumnDef="Details">
                             <th mat-header-cell *matHeaderCellDef> <span>Details</span> </th>
-                            <td mat-cell *matCellDef="let element; let i = index;" [class.final-td]="(i+1) == dataSource.length"  class="border-radius-right">  
+                            <td mat-cell *matCellDef="let element; let i = index;" [class.final-td]="(i+1) == dataSource.length"  class="border-radius-right clr-blue-expense">  
                                 <button mat-icon-button *ngIf="(i+1) != dataSource.length">
-                                  <mat-icon>border_color</mat-icon>
+                                  <mat-icon>Add Expense</mat-icon>
                                 </button>
                             </td>
                         </ng-container>
