--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -77,7 +77,7 @@
               <mat-radio-group>
                 <mat-radio-button value="1" [checked]="true">Live </mat-radio-button>
                 <mat-radio-button value="2">Virtual </mat-radio-button>
-                <mat-radio-button  class="hidden" value="3"> <input type="text" class="form-control" placeholder="Others"></mat-radio-button>
+                <mat-radio-button  class="" value="3"> <input type="text" class="form-control" placeholder="Others"></mat-radio-button>
               </mat-radio-group>
             </div>
 
