--- a/src/app/create-event/event-popup.html
+++ b/src/app/create-event/event-popup.html
@@ -1,5 +1,5 @@
-<div class="speaker-popup col-md-12">
-    <img class="close-position" src="assets/icons/popup-close.png">
+<div class="speaker-popup col-md-12"> 
+    <button class="btn-close pull-right" [mat-dialog-close]=""><img src="assets/icons/popup-close.png"></button>
     <div class="header-text-style col-md-12">Please Select a Territory</div>
 
     <div class="form-group">
