--- a/src/app/initiate-training/initiate-training.component.css
+++ b/src/app/initiate-training/initiate-training.component.css
@@ -16,7 +16,7 @@
 }
 .btn-blue{
     height: 55px;	width: 180px;	border-radius: 4px;	background-color: #2B62CA; margin-top: 14px;
-    color: #FFFFFF;	font-family: "Helvetica Neue";	font-size: 18px;	font-weight: 500;	line-height: 23px;	text-align: center;
+    color: #FFFFFF;		font-size: 18px;	font-weight: 500;	line-height: 23px;	text-align: center;
 }
 .master-heading{
     font-size: 26px;
@@ -25,7 +25,7 @@
 }
 .form-group label{
     margin-bottom: 6px;
-    font-family: "Helvetica Neue";	font-size: 14px;	line-height: 16px; color: #757575;
+    	font-size: 14px;	line-height: 16px; color: #757575;
 }
 .zero-bottom-mr ul li{
     margin-bottom: 0px;
@@ -35,7 +35,7 @@
     padding-bottom: 0px !important;
   }
 .select-date-popup-parent .daliog-master-heading{ 
-    color: #2B62CA;	font-family: "Helvetica Neue";	font-size: 28px;	font-weight: bold;	line-height: 34px;	text-align: center;
+    color: #2B62CA;		font-size: 28px;	font-weight: bold;	line-height: 34px;	text-align: center;
     margin-bottom: 35px;
 }
 .close-position{
