--- a/src/app/initiate-training/select-date.html
+++ b/src/app/initiate-training/select-date.html
@@ -1,5 +1,5 @@
 <div class="col-md-12 select-date-popup-parent">
-    <img src="assets/icons/popup-close.png" class="close-position">
+    <button class="btn-close pull-right" [mat-dialog-close]=""><img src="assets/icons/popup-close.png"></button>
     
     <div class="daliog-master-heading">Select Training Date</div>
     <div class="col-md-12 nopadding">
