--- a/src/app/manage-spkeaker-content/speaker-uploded.html
+++ b/src/app/manage-spkeaker-content/speaker-uploded.html
@@ -1,5 +1,5 @@
 <div class="speaker-popup">
-    <img class="close-position" src="assets/icons/popup-close.png">
+        <button class="btn-close pull-right" [mat-dialog-close]=""><img src="assets/icons/popup-close.png"></button>
     <div class="master-heading text-center">Speaker Content Has Been Uploaded Successfully!</div>
 
     <p>This resource has been associated with John Smith.</p>
