--- a/src/app/create-event/create-event.component.css
+++ b/src/app/create-event/create-event.component.css
@@ -429,7 +429,7 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
     margin-bottom: 30px;
 }
 .speaker-popup .header-text-style{
-    color: #2B62CA;	font-family: "Helvetica Neue";	font-size: 28px;	font-weight: bold;	line-height: 34px;
+    color: #2B62CA;		font-size: 28px;	font-weight: bold;	line-height: 34px;
     text-align: center;
     margin-bottom: 35px;
 }
@@ -437,7 +437,7 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
      margin-bottom: 45px;
 }
 .speaker-popup .form-group label{
-    color: #757575;	font-family: "Helvetica Neue";	font-size: 14px;	line-height: 16px;
+    color: #757575;		font-size: 14px;	line-height: 16px;
 }
 .close-position{
     position: absolute;
