--- a/src/app/reconcile-speaker-program/reconcile-speaker-program.component.css
+++ b/src/app/reconcile-speaker-program/reconcile-speaker-program.component.css
@@ -477,12 +477,12 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
   }
 
   .upload-popup-parent .daliog-master-heading{ 
-    color: #2B62CA;	font-family: "Helvetica Neue";	font-size: 28px;	font-weight: bold;	line-height: 34px;	text-align: center;
+    color: #2B62CA;		font-size: 28px;	font-weight: bold;	line-height: 34px;	text-align: center;
     margin-bottom: 35px;
 }
 .file-info{
     height: 38px; border: 1px solid #CECECE;	border-radius: 4px;
-    color: #4F4F4F;	font-family: "Helvetica Neue";	font-size: 16px;	line-height: 22px;
+    color: #4F4F4F;		font-size: 16px;	line-height: 22px;
     padding: 8px;
     margin-bottom: 10px;
 } 
@@ -507,7 +507,7 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:
     margin-bottom: 20px;
 }
 .upLodedContent i{
-    color: #4F4F4F;	font-family: "Helvetica Neue";	font-size: 14px;	font-style: italic;	line-height: 30px;	text-align: right;
+    color: #4F4F4F;		font-size: 14px;	font-style: italic;	line-height: 30px;	text-align: right;
 }
 .upLodedContent img{
     margin-left: 16px
