--- a/src/app/speaker/speaker-upload-popup.html
+++ b/src/app/speaker/speaker-upload-popup.html
@@ -1,5 +1,5 @@
 <div class="col-md-12 speaker-popup-parent">
-        <img src="assets/icons/popup-close.png" class="close-position">
+        <button class="btn-close pull-right" [mat-dialog-close]=""><img src="assets/icons/popup-close.png"></button>
         
         <div class="daliog-master-heading">Upload Files</div>
         <div class="col-md-12 nopadding">
